--- a/五倍官網/style.css
+++ b/五倍官網/style.css
@@ -1,3 +1,20 @@
+body {
+  position: relative;
+}
+.absolute {
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+  background-color: #ff133e;
+  border-radius: 30px;
+  padding: 10px;
+  font-size: 20px;
+  color: #fff;
+  box-shadow: 0 10px 15px -3px rgba(113, 128, 150, 0.5);
+}
+.absolute i {
+  margin-right: 5px;
+}
 .header {
   position: fixed;
   top: 0;
