--- a/五倍官網/style.css
+++ b/五倍官網/style.css
@@ -7,13 +7,13 @@ body {
   bottom: 20px;
   background-color: #ff133e;
   border-radius: 30px;
-  padding: 10px;
-  font-size: 20px;
+  padding: 16px;
+  font-size: 16px;
   color: #fff;
   box-shadow: 0 10px 15px -3px rgba(113, 128, 150, 0.5);
 }
-.absolute i {
-  margin-right: 5px;
+.absolute * {
+  margin: 8px 5px;
 }
 .header {
   position: fixed;
@@ -589,10 +589,11 @@ a.hover-line:hover {
 
 .section-5x ul li {
   margin: 0 auto;
+  transform: translateX(-125px);
 }
 
 .slide-card {
-  width: 208px;
+  width: 220px;
   margin: 10px 10px;
   border-width: 1px;
   border-radius: 8px;
