--- a/五倍官網_01/css/style.css
+++ b/五倍官網_01/css/style.css
@@ -5,8 +5,6 @@ body {
   --cherry-color: #ff133e;
   --content-width: 1200px;
   --shadow-color: rgba(216, 213, 213, 0.411);
-  /* overflow-x: hidden;
-  height: 100vh; */
   flex-wrap: wrap;
 }
 
@@ -143,7 +141,7 @@ body {
   display: grid;
   gap: 20px;
   grid-template-columns: repeat(2, 1fr);
-  /* grid-template-rows: repeat(3, 1fr); 不指定可以自動高*/
+  /* grid-template-rows: repeat(3, 1fr); 不指定可以自動*/
 }
 
 .teacher_title {
@@ -381,6 +379,8 @@ body {
   position: relative;
   margin: 48px 0;
   padding: 20px;
+  border: 1px solid var(--cherry-color);
+  /*應該使用偏移解決*/
   background-color: var(--cherry-color);
 }
 
